# docketworks

./: .codesightignore  .env.example  .env.precommit  .gitignore  .mcp.json.example  .pre-commit-config.yaml  .shellcheckrc  AGENTS.md  CLAUDE.md  MIGRATION_PLAN.md  README.md  SECURITY.md  codesight.config.json  company_defaults_backup_20260209.py  conftest.py  docketworks.code-workspace  manage.py  mypy-baseline.txt  mypy.ini  ngrok.yml  ngrok.yml.example  pyproject.toml  requirements.txt  tox.ini
.codesight/: CODESIGHT.md  KNOWLEDGE.md  components.md  config.md  coverage.md  events.md  graph.md  libs.md  middleware.md  routes.md  schema.md
.codesight/wiki/: 2026-03-03-process-documents-plan.md.md  auth.md  database.md  index.md  infra.md  log.md  overview.md  payments.md  ui.md  urls.md  urls_rest.md
.design-sync/: EXTRACTION_SPEC.md  NOTES.md  config.json  conventions.md
.design-sync/ds-bundle/: README.md  styles.css
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: cd-demo.yml  cd.yml  ci.yml  codeql.yml  deploy-uat.yml  stale.yml  stoney-openapi-sync.yml
adhoc/: upgrade_script.py
apps/: testing.py
apps/accounting/: urls.py
apps/accounts/: __init__.py  apps.py  models.py  permissions.py  serializers.py  staff_anonymization.py  urls.py  utils.py
apps/client/: __init__.py  models.py  serializers.py  urls_rest.py
apps/company/: __init__.py  models.py  person_serializers.py  serializers.py  urls_people_rest.py  urls_rest.py  utils.py
apps/crm/: __init__.py  models.py  serializers.py  tasks.py  urls.py
apps/job/: __init__.py  diff.py  enums.py  tasks.py  urls.py  urls_rest.py  utils.py
apps/operations/: __init__.py  apps.py  scheduler_jobs.py  tasks.py  urls.py
apps/process/: urls_rest.py
apps/purchasing/: __init__.py  models.py  serializers.py  tasks.py  urls.py  urls_rest.py
apps/quoting/: __init__.py  admin.py  apps.py  mcp.py  models.py  serializers_scheduled_tasks.py  tasks.py  tests_mcp.py  urls.py  views.py  views_scheduled_tasks.py
apps/timesheet/: urls.py
apps/workflow/: __init__.py  apps.py  authentication.py  enums.py  exception_handlers.py  exceptions.py  middleware.py  scheduler_jobs.py  search_telemetry_serializers.py  serializers.py  tasks.py  urls.py  utils.py  xero_webhooks.py
docketworks/: __init__.py  asgi.py  celery.py  nplusone.py  settings.py  settings_test.py  urls.py  wsgi.py
docs/: README.md  architecture.md  backup-restore-process.md  client_onboarding.md  definition-of-done.md  development_session.md  function_character_counts.tsv  function_under_80_review.tsv  initial_install.md  instance-setup-demo.md  instance-setup-production.md  instance-setup-uat.md  jira-usage.md  jira.md  msm-cutover.md  ngrok_setup.md  production-cutover-plan.md  production-mysql-to-postgres-migration.md  restore-prod-to-hotfix.md  restore-prod-to-nonprod.md  restore-to-dev.md  restore-workaround-jobevent-staff-null.md  server_setup.md  server_setup_prod.md  server_setup_uat.md  trello.md  uat_setup.md  updating.md  xero_setup.md
docs/.codesight/: KNOWLEDGE.md
docs/adr/: 0001-exception-already-logged-dedup.md  0002-auth-gate-global-allowlist.md  0003-etag-optimistic-concurrency.md  0004-job-delta-envelope.md  0005-emit-tools-pattern.md  0006-rest-resource-hierarchy.md  0007-xero-payroll-sync.md  0008-frontend-subtree-merge.md  0009-env-consolidation-app-domain.md  0010-single-deploy-script.md  0011-codesight-precommit-wiki.md  0012-accounting-provider-strategy.md  0013-error-message-clarity-over-info-hiding.md  0013-fix-data-not-fallback.md  0014-explicit-else-branches.md  0015-fix-data-not-fallback.md  0016-ambiguous-names-trigger-rename.md  0017-zero-backwards-compatibility.md  0018-fail-early-no-fallbacks.md  0019-mandatory-error-persistence.md  0020-frontend-backend-separation.md  0021-frontend-generated-api-client-only.md  0024-celery-async-task-processing.md  0025-tests-state-business-risk.md  0026-plan-the-tests-before-approval.md  0027-deploy-capability-with-its-controls.md  0028-type-annotations-are-data-contracts.md  0029-servers-run-the-production-branch.md  0030-first-class-people-and-company-links.md  README.md  _template.md
docs/plans/: 2026-03-03-process-documents-plan.md  2026-03-28-debranding-and-stale-docs.md  2026-03-29-finalize-restore-doc.md  2026-03-31-scheduler-service-per-instance.md  2026-03-31-scheduler-service-plan.md  2026-04-09-wip-report-script.md  2026-04-10-seed-invoices-to-xero.md  2026-04-10-xero-account-backup-cleanup.md  2026-04-12-accounting-abstraction.md  2026-04-12-delivery-receipt-code-review.md  2026-04-12-jobevent-migration-pr-design.md  2026-04-12-jobevent-migration-pr.md  2026-04-15-msm-prod-server-install.md  2026-04-16-sales-pipeline-report.md  (+55 more)
frontend/: .env.example  .env.test  .prettierignore  CLAUDE.md  README.md  WARP.md  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  router-auto-options.ts  schema.yml  shell_alias_setup.txt  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
jobs_manager/: authentication.py  settings.py  urls.py
scripts/: README.md  analyze_client_contacts.py  analyze_company_people.py  backup_db.sh  backup_instance_files.sh  check_mypy.sh  check_naive_local_dates.py  check_requirements.sh  cleanup_backups.py  cleanup_backups.sh  copy_material_lines.py  create_master_template.py  debug_xero_fetch.py  deploy.sh  dump_settings.py  explore_google_drive.py  find_late_imports.py  fix_test_client.py  fix_test_company.py  fix_welding_stock_cost.py  generate_requirements.sh  generate_url_docs.py  geocode_addresses.py  get_gapi_token.py  json_to_mysql.py  legacy_rollback.sh  migrate_mariadb_to_postgres.sh  migrate_to_snapshot.py  move_time_between_jobs.py  payroll_reconciliation.py  poc_2talk_scraper.py  poc_phone_provider_scraper.py  populate_product_mappings.py  pre-push  predeploy_backup.sh  predeploy_rollback.sh  production_data_fixer.py  pull_prod_backup.sh  pull_prod_files.sh  push_clients_to_xero.py  (+27 more)
(+1294 files in other folders)
